// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mergedShipments is truthy 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-start"
>
  <div
    className="flex-100 layout-row layout-wrap layout-align-start-start"
  >
    <AdminSearchableShipments
      adminDispatch={Object {}}
      handleClick={[Function]}
      hubs={Object {}}
      limit={0}
      seeAll={false}
      shipments={
        Array [
          Object {
            "clientName": "undefined undefined",
            "companyName": "undefined",
            "destinationHub": "",
            "originHub": "",
            "schedule_set": Array [
              Object {
                "hub_route_key": "FOO-BAR-BAZ",
              },
            ],
          },
        ]
      }
      t={[Function]}
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
      title=" Shipments"
      tooltip="Shipments requested from the open or client shop. Investigate the shipment data and evaluate whether to accept, edit or decline the shipment"
      userView={false}
    />
  </div>
</div>
`;

exports[`shallow render 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-start"
>
  <div
    className="flex-100 layout-row layout-wrap layout-align-start-start"
  >
    <AdminSearchableShipments
      adminDispatch={Object {}}
      handleClick={[Function]}
      hubs={Object {}}
      limit={0}
      seeAll={false}
      shipments={Array []}
      t={[Function]}
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
      title=" Shipments"
      tooltip="Shipments requested from the open or client shop. Investigate the shipment data and evaluate whether to accept, edit or decline the shipment"
      userView={false}
    />
    <div
      className="flex-95 flex-offset-5 layout-row layout-wrap layout-align-start-center"
    >
      <div
        className="flex-100 layout-row layout-align-end-center"
      >
        <div
          className="flex-none layout-row"
        >
          <RoundButton
            active={false}
            back={false}
            classNames=""
            disabled={false}
            flexContainer="100"
            handleDisabled={null}
            handleNext={[Function]}
            icon=""
            iconClass="fa-chevron-left"
            inverse={false}
            size="small"
            text="Back"
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
          />
        </div>
      </div>
      <div
        className="flex-100 layout-row layout-align-space-between-center sec_subheader"
      >
        <p
          className=" sec_subheader_text flex-none"
        >
           No Shipments yet
        </p>
      </div>
      <p
        className="flex-none"
      >
         As shipments are requested, they will appear here
      </p>
    </div>
  </div>
</div>
`;

exports[`shipments is falsy 1`] = `""`;
